--- a/examples/download_and_find.ipynb
+++ b/examples/download_and_find.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_links = pd.read_csv('links.csv')\n",
+    "df_links = pd.read_csv('../links.csv')\n",
     "session = requests_html.HTMLSession()\n",
     "for i in range(0, 7758):\n",
     "    url = df_links.iloc[i]['hyperlink']\n",
@@ -33,7 +33,7 @@
     "        response = session.get(url)\n",
     "        if response.status_code == 200:\n",
     "            html_content = response.html.html\n",
-    "            with open(f'./files/response_{i}.html', 'w', encoding='utf-8') as file:\n",
+    "            with open(f'../files/response_{i}.html', 'w', encoding='utf-8') as file:\n",
     "                file.write(html_content)\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing URL {url}: {e}\")"
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pasta = './files'\n",
+    "pasta = '../files'\n",
     "arquivos = sorted(os.listdir(pasta))\n",
     "\n",
     "for filename in arquivos :\n",
@@ -9337,7 +9337,7 @@
    ],
    "source": [
     "def main():\n",
-    "    df_links = pd.read_csv('links.csv')\n",
+    "    df_links = pd.read_csv('../links.csv')\n",
     "\n",
     "    session = requests_html.HTMLSession()\n",
     "\n",
